--- a/economy-gui/src/main/resources/fxml/ecoMap.fxml
+++ b/economy-gui/src/main/resources/fxml/ecoMap.fxml
@@ -34,7 +34,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -44,51 +43,26 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox id="launcherGUI" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.psi.gui.EcoLauncherController">
+<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.psi.gui.EcoLauncherController">
   <children>
-    <SplitPane id="mainPanel" dividerPositions="0.5" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <SplitPane dividerPositions="0.7561247216035635" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
-      <AnchorPane id="leftPanel" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
-        <children>
-          <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" style="&#10;" text="Select starting options" textAlignment="CENTER" wrapText="false">
-                     <font>
-                <Font size="18.0" fx:id="x1" />
-                     </font>
-                     <textFill>
-                <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
-                     </textFill>
-                  </Label>
-                  <HBox id="playerOptions" layoutX="20.0" layoutY="113.0" prefHeight="53.0" prefWidth="406.0">
-                     <children>
-                        <Label prefHeight="17.0" prefWidth="125.0" text="Player: " />
-                        <ChoiceBox id="playerTown" prefWidth="150.0" />
-                        <ChoiceBox id="playerHero" prefWidth="150.0" />
-                        <ChoiceBox id="playerBonus" prefWidth="150.0" />
-                     </children>
-                  </HBox>
-                  <HBox id="computerOptions" layoutX="20.0" layoutY="172.0" prefHeight="53.0" prefWidth="406.0">
-                     <children>
-                        <Label prefHeight="17.0" prefWidth="127.0" text="Computer: " />
-                        <ChoiceBox id="computerTown" prefWidth="150.0" />
-                        <ChoiceBox id="computerHero" prefWidth="150.0" />
-                        <ChoiceBox id="computerBonus" prefWidth="150.0" />
-                     </children>
-                  </HBox>
-                  <HBox id="playerOptions" layoutX="20.0" layoutY="79.0" prefHeight="34.0" prefWidth="406.0">
-                     <children>
-                        <Label prefHeight="17.0" prefWidth="91.0" text="Player name" />
-                        <Label layoutX="10.0" layoutY="10.0" prefHeight="17.0" prefWidth="106.0" text="Town" />
-                        <Label layoutX="101.0" layoutY="10.0" prefHeight="17.0" prefWidth="110.0" text="Hero" />
-                        <Label layoutX="187.0" layoutY="10.0" prefHeight="17.0" prefWidth="86.0" text="Bonus" />
-                     </children>
-                  </HBox>
-        </children>
-      </AnchorPane>
-        <AnchorPane id="rightPanel">
+        <AnchorPane>
           <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Scenario name:" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                  <Label layoutX="154.0" layoutY="19.0" text="scenarioName" />
-                  <Button id="beginButton" layoutX="49.0" layoutY="512.0" mnemonicParsing="false" onAction="#switchToMap" prefHeight="25.0" prefWidth="154.0" text="Begin" />
+            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Map" textAlignment="CENTER" wrapText="false">
+              <font>
+                <Font size="18.0" fx:id="x1" />
+              </font>
+              <textFill>
+                <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
+              </textFill>
+            </Label>
+          </children>
+        </AnchorPane>
+        <AnchorPane prefHeight="551.0" prefWidth="295.0">
+          <children>
+            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="ControlPanel" textAlignment="CENTER" textFill="$x2" wrapText="false" />
+                  <Button layoutX="47.0" layoutY="162.0" mnemonicParsing="false" onAction="#switchToLauncher" text="Go back to launcher" />
           </children>
         </AnchorPane>
       </items>
