--- a/battle-gui/src/main/resources/fxml/spell-book-gui.fxml
+++ b/battle-gui/src/main/resources/fxml/spell-book-gui.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="218.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="218.0" xmlns="http://javafx.com/javafx/11-ea+25" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -18,6 +18,6 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="63.0" text="Cast" translateX="40.0" translateY="20.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Button fx:id="castButton" alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="63.0" text="Cast" translateX="40.0" translateY="20.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    </children>
 </GridPane>
