--- a/battle-gui/src/main/resources/fxml/spell-book-gui.fxml
+++ b/battle-gui/src/main/resources/fxml/spell-book-gui.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="218.0" xmlns="http://javafx.com/javafx/11-ea+25" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="376.0" prefWidth="303.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="95.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="230.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -23,20 +22,9 @@
       <Button fx:id="castButton" alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="63.0" text="Cast" translateX="40.0" translateY="20.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    </children>
     <children>
-        <ImageView
-                fx:id="imageView"
-                fitHeight="150.0"
-                fitWidth="200.0"
-                layoutX="61.0"
-                layoutY="83.0"
-                pickOnBounds="true"
-                preserveRatio="true"
-        >
+        <ImageView fx:id="imageView" fitHeight="85.0" fitWidth="92.0" layoutX="61.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image
-                        url="@../../resources/52_haste.png"
-                        backgroundLoading="true"
-                />
+                <Image backgroundLoading="true" url="@../../resources/52_haste.png" />
             </image>
         </ImageView>
     </children>
